@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST compass-0.12.6.gem 1167360 SHA256 af20f1eac1bd6b3b478ace7fb1ade6d4349163b1d58960e7192dcf0913b718a1 SHA512 f3ae52acdb6a7e5c6b36431fb5660f518c21ffd7218ff88559d107de4bf05aa14890f4d2629542c4675965ed4740ac8e9cd93bd6117393aa82c39267d87f9af9 WHIRLPOOL 1557a7c6d806671fbf5a2826800a6a8ed482b67ed4230ecc6373c2120913db635a6b80b9dee91df782be63282ef892efb1f18a0db7aad45cfd738ddc2c84d237
+DIST compass-0.12.7.gem 1160192 SHA256 e1bb4113fe000e3b93793c1bcac262ba942040be599f6c24fc1b6a007fb5a62b SHA512 50f256bc107ec2fa5516e3115d898f1e6011045e4c1e6042b79a312affae072a3323a40b4edc4591591500d217369404c309574aecd1730f1c07331225db5269 WHIRLPOOL 9785292a297dc4cbf3dba4835a8fcb45adcbad448fbd268ed2a4e8be9f4cc3755be49171bccaf5a3e953ab9fcd5222e5ef24a5885f8122a7c4224e1a9efd76bd
 EBUILD compass-0.12.6-r1.ebuild 1170 SHA256 2847d57f1ebdebf1c6e6c6db1ab4e3df65451b154996f1a87b0145672de68df4 SHA512 7453dd7c8b6a033b40039a07794684f9dd4ff763dba86fea1cc69c535d66c7d2ecccd05b5c01e7bd89738e95a97188e7f3875016d8793e0cba1bd9fef5bb26b8 WHIRLPOOL 78e92ab0f0a49269f46e4287f5bb3f2e65ff346bdd8de3230ecba2f11e312cd2643e561ce43d82a3d3ec1c57a4460dd742dd37a05c885f1ed755c316d16ad9d9
-MISC ChangeLog 695 SHA256 992e899b6b2f756cdf4e136f49663f175e96cc53bd9f6c7f988863a664d352a6 SHA512 87072360678248049c499542501624bf90961ebf271c5fb8fb63989d3bc79db3035b3d8c2eac10b839d120bdee78d9a2f3541ddcf6b350e22232ccdc0c3445f4 WHIRLPOOL f5d83d5fb316a532e9d0931a216b8e0585d249f13f62f33f7fa77a9090f4e3ff547969d3ea049607bcb42ce9169227b10d450c8a4022329bbd80fff7fc9ec521
+EBUILD compass-0.12.7.ebuild 1167 SHA256 d56a664dce969aa8cf72ea5cbff2e88e6f0017e51788dc3da50d76ec940b6820 SHA512 0ab130b686a2bedde90e8ceb4c996898848fa86ed5222590379ca33bc94901772c6b2005f89bbfc7e62f215d86c3cf5221ac643f0eef9e68d0c13e124a1c89d5 WHIRLPOOL 9062cec3a4a35e1673d2272869e470a605e8ca6194711eb20606aa6060cf0b4367cb1e81c423fd47798b001f80a38804e2f48fe176a3316c86c6923152d97491
+MISC ChangeLog 817 SHA256 0244c081c30cf3687abbfe55b7d03c1875f6050bfa0c3f28e9dc63417e65bc7a SHA512 580ccc70b7d13ce6abc6e61d4b326043d43f1402972b09f30750b7e2af343bc7c126c59e36e7b2c58d213ec14d041e3db8237c63d0a7f1cc3be3c1495eed59df WHIRLPOOL d5d14c9bc0fcb3d65980eecb091ea09249c8b14411e6989c748b57c6707c87590b9cc4b9b541e6f76195cc57012f1c3f0d4d06e913c082a8e0caade276a48a42
 MISC metadata.xml 421 SHA256 199f0cb9c26fa4c068c1eb6e8c65c584a4e95e169bfe244d0e0d937d6d4e3e6f SHA512 dda09b3277dfeab97742a42e6ec7b4577c942ebcf6d5c601a0c81e19a2494629c470f766240e7c813faa8d7221e9b21619db05c6f4cb618c9cb9fea1625d6f0a WHIRLPOOL 31ce99a6928ee1eb4a239d33ce11bdae0edc61ab29a8c590bd2a2ea998e3f75cb6e1cc63aaf8502ba211ca11a99167f049a4b89f4813511b9eeafcaf90c32157
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlN7mzoACgkQiIP6VqMIqNcAWgEAlcZ40xuGeOWbXcupmfiKKaIS
-L9DLpQ0nKAMvSAogs4UA/2OaS7/eiV5oE631xsMPlKj7ENufDRw0gyssWN9vdK/F
-=fGP9
+iF4EAREIAAYFAlPxk58ACgkQiIP6VqMIqNe52gD8CuRnwfo1Rjnk6yY/qTcEUK7b
+R6gGBNqa90xf7YOJM4gA/01oEVM2GvyTGWWUQx3/zMjvChF5xcS+3LnR94nD1C7h
+=XCgC
 -----END PGP SIGNATURE-----
