@@ -2,15 +2,13 @@
 Hash: SHA256
 
 DIST fssm-0.2.10.gem 22528 SHA256 2aab89a151b029b8f8589be9edc7eef2f7f579c9e8940f893774ecd6c8c4c3d6 SHA512 3de2cf03b3f2b0a73ea120d72ed66436ac2b5124f5af8173a46294bbc869f778db6b445ff1e853af24623ba0b8cb88c4c0931abf1504976e21b0585a1908bf15 WHIRLPOOL 0b8ed4db2fda98b1f7d231e4e467337d2a4145d256e841725f6477ef0b644bb5fbf3451ab353054dde1cd44e008ce1330c87c267894b9689a730fcbfbdcbf5b2
-EBUILD fssm-0.2.10.ebuild 686 SHA256 81a998a8d56212d4d4c06a31aefa76203c86baa3651bc4afc054022f4f4a7128 SHA512 55d1ff124090b1172b8ec08982a334fa4681b7d99e0d39c9ed3729c9e2e82bd1bddf8de72bfbb92680ce8d3824bb715ee369dbb6ac33b5d973a9e1fcff778871 WHIRLPOOL e092b74094c34d20eb120ce0cf8540b56a6f88710244e9ecc2b7577279ad27c89896197e0b3d39a9af8a7335979aa24f56b9e75d2c94d86b7a6595e342701256
-MISC ChangeLog 374 SHA256 c57c3bfa82ad5323b1c735e36ee6cab4b9b2a706235b881e22a44f6912c3cdab SHA512 089496176376bb63583f179b2a5187a98d109ec1270b3721138378b42c307b04d2512afca2120a0253364fc058f6bc0d1f49efc36f3ee9ea9c0341ac91942a32 WHIRLPOOL 6c6d7fc1f187847e2fac5d24cc4017c009f64d5aa76eee709caadaffc1c63c6870ce85389de5dc2b75f2f6f3c8e95c02bb3f005945b6a52dc41893f4b6f739a2
+EBUILD fssm-0.2.10.ebuild 691 SHA256 4ebb9b323502601b50209aecbd16d900a0887ab0607efcddd115ea63d5dd454a SHA512 f926c3d3fd18c8858abaf321ad9789ffeaeb97d233188f8711cf7f59fbdbc7179929e9433a7a3b888fb520a55be9d3ef49f2f267aa7202159572530e7d2a941a WHIRLPOOL c6096d36f2e1aecd2977de1045808e82b6dbb284654ddc4168725a5037815cd347defc80edb1402101d7a5c65a5f9d90c205db0462b57d55601e97354d5c3118
+MISC ChangeLog 457 SHA256 a308ad7347ec4031a2b90178a97455fd72976c13e4b9674f3540fef8099690c5 SHA512 eb2b25f461575072b45e3da93af775188409227babb57c67c3aa1a765ab67d30c2e8106f451d58b0c3f2f2987fc4877345e7265d6bd662d616a0ca1741e07fce WHIRLPOOL fbe8831bf76d3e46ecb2015fa7d4ee00561e159324941dd8b594ae58859c62388200f1897892b3d3df3807c0f41c37de942f6e6281f9ad06e0d173f6acc66ccb
 MISC metadata.xml 561 SHA256 6139b9600fbc576fe039af69fe709449af0af2f7267095e9e2dfc2266c43ae8f SHA512 fb02e0d18f53d298d21af299f0bbb914f0ad8790a2bda3bb30978e1a96138434f3c68c4aa578e1edb2746b6f7cd57d475f5d70e1fa56affa7992e9ef0e8caed9 WHIRLPOOL 0b372f77eebb3d98cf9fa33ffc532af74ff94f526a33f5065ae1f880dcfad848bd9cecbacbd5ecd9296c862f1c15b50b6dfb18cc9ab1fbea2530155764c4eef9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iL4EAREIAGYFAlNv97RfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldENFNTJBQkRBNTQzRTQ5NTdCMDQ5ODMwNzQ3
-REQ1NDg0QjBBNzJGRDIACgkQR91UhLCnL9KvvQD9HCz4AKmRPY25ZIh83cf2fmU/
-xLTTr0UQ6VVfjvrRNXQA/18xdJmnQofQGBK78u8EDKV9Ue4WHa0SnIFkKxkUdZkw
-=lOyC
+iF4EAREIAAYFAlPxj88ACgkQiIP6VqMIqNfWbwD+KZKdW/G/SSWOdQJ64dBdcueL
+dA41GEa/9RGITDxVHhYA/jrQGl6ZuUBxVuLJ6k/1b589Msv9z1ly7RTYFPNUA3f8
+=5GUe
 -----END PGP SIGNATURE-----
